トップ画像スローガン変更

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
       <li>
         <img src="https://lh3.googleusercontent.com/oUYbReteA1foRh86rWpSE9jftNRw41bNa2RzVhI2EMMeZqyXMJ1Vt2IGGi2Kx9d6sc8qkNQR8fQnRmcXyGUXFwCEQLdFca5EBYpwrdNuoNIiG6nAMyQRCpfu7P0Rd-hvNMCu_5v4lXxOOybKnR5-mMdWFLpMHFJd8YbWZtxlIyuOKq6nUFv1RQqRJBYhzdPY_PIq5nGRjSnU-PT53dVjvaEYHGieb3BOOpLKdPV_8nens-2cdJRsAQVZMGjXDHDYBO7GDzRcUGt_7iUn4hCv-4T1erXOY1-E2j8KGak3FzZs38AR8FlmTT-7wy30YAENHuZS3hl2z4zw_Z_wl67tggdvUkz47kxAq6gsciiMqe9Yu1Z90JeSR40eY1IKXe8AitOO_hvUBkjhSRG9EQN-SoEZam9QNB1cLqMEHUIfQxQJciTF3SFcUa7fptp6gf8RnKT_LOulvL9riSsFvD3Ol-7Cj19DGK0UT4T_Ht5uyv7UP2Nzo-cEjpKmLi3Q7JbRS-p7iHPMhOTBvYrZhsvU2JrpemeGGubJ0GYkdSftCz7ikH6nO5S45kMX2H5ZnJ5962MsG0VySiXQtGvLVbXill0iHxvQGBaKK2nv9m_RVBNUP8XMZG6VXqQ8DR2hUDXDDAFbnQRk3SBGggZXY_YJ4HjznvDHdbTh7gzoP-FQfQ=w2480-h1652-no"> <!-- random image -->
         <div class="caption center-align">
-          <h3>This is our big Tagline!</h3>
-          <h5 class="light grey-text text-lighten-3">Here's our small slogan.</h5>
+          <h3>年に一度へ、情熱を注ぐ。</h3>
+          <h5 class="light grey-text text-lighten-3">私たちは若木祭の神輿渡御を運営するサークルです。</h5>
         </div>
       </li>
     </ul>
