アイコンフォントをローカルに追加

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!--Import style.css-->
     <link type="text/css" rel="stylesheet" href="css/style.css"  media="screen,projection"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <link rel="stylesheet" href="css/material-icons.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
   </head>
