--- a/test.html
+++ b/test.html
@@ -36,7 +36,7 @@
       </ul>
     </div>
   </nav>
- <li class="padding32"><a class="collapsible-header"><i class="midium material-icons">info</i>
+  <i class="material-icons">info</i>
       <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js/materialize.min.js"></script>
