--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <!--Import Google Icon Font-->
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css" rel="stylesheet" />
 
     <!--Import materialize.css-->
@@ -13,7 +13,7 @@
     <!--Import style.css-->
     <link type="text/css" rel="stylesheet" href="css/style.css"  media="screen,projection"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="css/material-icons.css">
+    <link rel="stylesheet" href="iconfont/material-icons.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
 
   </head>
