モバイルヘッダ変更。お祭りアカデミア。震災メッセージ追加。

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <header>
   <nav class="nav-extended">
     <div class="nav-wrapper z-depth-3">
-      <a href="#" class="brand-logo"><img class="mutsumi-icon-head" src="pic/f-mutsumi.svg">國學院大學 若木睦</a>
+      <a href="#" class="brand-logo"><img class="mutsumi-icon-head" src="pic/f-mutsumi.svg"><b class="head-logo">國學院大學 若木睦</b></a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="side-nav fixed collapsible collapsible-accordion" id="mobile-demo">
       <li><div class="userView">
@@ -53,7 +53,7 @@
         <div class="collapsible-body">
           <ul>
             <li><a href="#!"><i class="midium material-icons">today</i>活動日誌</a></li>
-            <li><a href="#!"><i class="midium material-icons">mode_edit</i>お祭りコラム</a></li>
+            <li><a href="#!"><i class="midium fa fa-university" aria-hidden="true"></i>お祭りアカデミア</a></li>
             <li><a href="#!"><i class="midium fa fa-paper-plane-o" aria-hidden="true"></i>お知らせ</a></li>
           </ul>
         </div></li>
@@ -90,7 +90,6 @@
     </ul>
   </div>
   </div>
-
     <div class="row">
       <div class="col s12 m6 l4">
         <div class="card">
@@ -137,6 +136,14 @@
           </div>
         </div>
       </div>  <!--3rd-->
+    </div>
+    <div class="row">
+      <div class="col s12">
+        <div class="grey card-panel teal center-align">
+          <span class="white-text">東日本大震災、熊本県大地震で被災された方々の復興をこころよりお祈り申し上げます。
+          </span>
+        </div>
+      </div>
     </div>
 </main>
   <footer class="page-footer z-depth-3">
