続きを読む。モバイルヘッダ大きさ変更

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
       <li>
         <img src="https://lh3.googleusercontent.com/4DtwLLBaa_2A0eLH6U9KFAi7_wIJLvmLBqLw58eYN4iQqfOMFrTKAFmIa1qlUuf1be_ohS_8hxz-NN5OZBGRsdK09-Q8q7Nhr7yCIk1IZd0DImzottGabXKOctZQF8P4gNeerp_-OPrrZXrpmiuaoO2_9XuBTWyrEXHBxVyr8j8J8uanCnstANxvzAN1zpOakoDPc4gK06nomln0x782aR-vHu2cSDRZu7yXz29XaIA-wDRSXAfd9gahp9Co-ylknkL9WVpF8Y7eCe8vwWtfVPB78v1uGCtf_0VuMpQ_Y2Mqmkh58fgPuYoyEbvSn09s5AsQnyXZtwnuacatGBNpJ6UHmkfjiCnP9lVfQq3HIkcm3H_6Lmb7MnQcE25bSV2yY1qfEoeDU2Wmgqv2-Tt0pVfqUQQhpUJsuznA-rETanqzIDV2QYs1KBS4T-kbI5dKDYg1XaPUHXv9LkJZYLaj2RMnKPpEi9PlVJCxmrKN0gNN4iUnSD4I_m3WVdgFTytcBosHPBTbqxzqJ03WTIzESk0qLpc3i39mcmbTCTnmmlS_ycXE_X59F3_2PPcRghR51-Tqt4HK1fDNJ56lFlr2qa7LW-mZwEVrVjMqodAlAj59zXUsRQc_8X04Zv-bn7vvLWT-s5Gs5sFIRqEP-LpjJvzro2oqMTxdbzk8i2_GcA=w2478-h1652-no"> <!-- random image -->
         <div class="caption left-align">
-          <h3>毎日がお祭り騒ぎだ。</h3>
+          <h3>毎日がお祭りだ。</h3>
           <h5 class="light grey-text text-lighten-3">若木睦では大学生活をお祭りにしたい人を常時募集中です。</h5>
         </div>
       </li>
       <li>
         <img src="https://lh3.googleusercontent.com/oUYbReteA1foRh86rWpSE9jftNRw41bNa2RzVhI2EMMeZqyXMJ1Vt2IGGi2Kx9d6sc8qkNQR8fQnRmcXyGUXFwCEQLdFca5EBYpwrdNuoNIiG6nAMyQRCpfu7P0Rd-hvNMCu_5v4lXxOOybKnR5-mMdWFLpMHFJd8YbWZtxlIyuOKq6nUFv1RQqRJBYhzdPY_PIq5nGRjSnU-PT53dVjvaEYHGieb3BOOpLKdPV_8nens-2cdJRsAQVZMGjXDHDYBO7GDzRcUGt_7iUn4hCv-4T1erXOY1-E2j8KGak3FzZs38AR8FlmTT-7wy30YAENHuZS3hl2z4zw_Z_wl67tggdvUkz47kxAq6gsciiMqe9Yu1Z90JeSR40eY1IKXe8AitOO_hvUBkjhSRG9EQN-SoEZam9QNB1cLqMEHUIfQxQJciTF3SFcUa7fptp6gf8RnKT_LOulvL9riSsFvD3Ol-7Cj19DGK0UT4T_Ht5uyv7UP2Nzo-cEjpKmLi3Q7JbRS-p7iHPMhOTBvYrZhsvU2JrpemeGGubJ0GYkdSftCz7ikH6nO5S45kMX2H5ZnJ5962MsG0VySiXQtGvLVbXill0iHxvQGBaKK2nv9m_RVBNUP8XMZG6VXqQ8DR2hUDXDDAFbnQRk3SBGggZXY_YJ4HjznvDHdbTh7gzoP-FQfQ=w2480-h1652-no"> <!-- random image -->
-        <div class="caption center-align">
+        <div class="caption left-align">
           <h3>年に一度へ、情熱を注ぐ。</h3>
           <h5 class="light grey-text text-lighten-3">私たちは若木祭の神輿渡御を運営するサークルです。</h5>
         </div>
@@ -102,7 +102,7 @@
             I am convenient because I require little markup to use effectively.</p>
           </div>
           <div class="card-action">
-            <a href="#">This is a link</a>
+            <a href="#">続きを読む</a>
           </div>
         </div>
       </div> <!--1nd-->
@@ -117,7 +117,7 @@
             I am convenient because I require little markup to use effectively.</p>
           </div>
           <div class="card-action">
-            <a href="#">This is a link</a>
+            <a href="#">続きを読む</a>
           </div>
         </div>
       </div>  <!--2nd-->
@@ -132,7 +132,7 @@
             I am convenient because I require little markup to use effectively.</p>
           </div>
           <div class="card-action">
-            <a href="#">This is a link</a>
+            <a href="#">続きを読む</a>
           </div>
         </div>
       </div>  <!--3rd-->
