Shareボタン、文修正

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <nav class="nav-extended">
     <div class="nav-wrapper z-depth-3">
       <a href="#" class="brand-logo"><img class="mutsumi-icon-head" src="pic/f-mutsumi.svg"><b class="head-logo">國學院大學 若木睦</b></a>
+        </div>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="side-nav fixed" id="mobile-demo">
       <li><div class="userView">
@@ -38,6 +39,7 @@
         <object type="image/svg+xml" data="pic/mutsumi.svg" width="210"></object>
       </div></div></li>
       <p class="topmenu">サイトメニュー</p>
+
         <li><a href="sass.html"><i class="midium material-icons">store</i>トップページ</a></li>
         <li class="no-padding">
           <ul class="collapsible collapsible-accordion">
@@ -67,7 +69,7 @@
   </nav>
 </header>
 <main>
-  <div class="top-img">
+  <div class="top-img-index">
     <div class="slider">
     <ul class="slides">
       <li>
@@ -171,8 +173,18 @@
     <div class="footer-copyright">
       <div class="container">
       © 2017 Copyright Wakagimutsumi
-      <a class="grey-text text-lighten-4 right" href="#!">サイトマップ<i class="fa fa-sitemap" aria-hidden="true"></i></a>
+      <a class="grey-text text-lighten-4 right" href="#!"><i class="fa fa-sitemap" aria-hidden="true"></i></a>
       </div>
+    </div>
+    <div class="fixed-action-btn">
+      <a class="btn-floating btn-large blue-grey darken-3">
+        <i class="large fa fa-share" aria-hidden="true"></i>
+      </a>
+      <ul>
+        <li><a class="btn-floating red darken-1"><i class="material-icons">format_quote</i></a></li>
+        <li><a class="btn-floating  blue darken-4"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+        <li><a class="btn-floating blue"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+      </ul>
     </div>
 </footer>
 
