Searchページ追加。グラデーション追加。

--- a/archive.html
+++ b/archive.html
@@ -38,7 +38,7 @@
         <object type="image/svg+xml" data="pic/mutsumi.svg" width="210"></object>
       </div></div></li>
       <p class="topmenu">サイトメニュー</p>
-        <li><a href="sass.html"><i class="midium material-icons">store</i>トップページ</a></li>
+
         <li class="no-padding">
           <ul class="collapsible collapsible-accordion">
             <li><a class="collapsible-header waves-purple"><i class="midium material-icons">info</i>サークル概要</a>
@@ -61,7 +61,7 @@
                 </ul>
               </div></li></ul></li>
         <li><a href="collapsible.html"><i class="midium material-icons">question_answer</i>若木睦Q&A</a></li>
-        <li><a href="#!"><i class="midium material-icons">email</i>お問い合わせ</a></li>
+        <li><a href="#!"><i class="midium material-icons">search</i>検索</a></li>
       </ul>
     </div>
   </nav>
@@ -155,6 +155,17 @@
       © 2017 Copyright Wakagimutsumi
       <a class="grey-text text-lighten-4 right" href="#!"><i class="fa fa-sitemap" aria-hidden="true"></i></a>
       </div>
+    </div>
+    <div class="fixed-action-btn horizontal">
+      <a class="btn-floating btn-large blue-grey darken-3">
+        <i class="fa fa-map-signs" aria-hidden="true"></i>
+      </a>
+      <ul>
+        <li><a class="btn-floating red darken-1"><i class="fa fa-home" aria-hidden="true"></i></a></li>
+        <li><a class="btn-floating green"><i class="material-icons">search</i></a></li>
+        <li><a class="btn-floating  blue darken-4"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+        <li><a class="btn-floating blue"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+      </ul>
     </div>
 </footer>
 
