--- a/archive.html
+++ b/archive.html
@@ -123,6 +123,17 @@
         </div>
       </div>  <!--3rd-->
     </div>
+    <div class="row s12 pg-box">
+      <ul class="pagination">
+        <li class="disabled"><a href="#!"><i class="material-icons">chevron_left</i></a></li>
+        <li class="active z-depth-2"><a href="#!">1</a></li>
+        <li class="waves-effect"><a href="#!">2</a></li>
+        <li class="waves-effect"><a href="#!">3</a></li>
+        <li class="waves-effect"><a href="#!">4</a></li>
+        <li class="waves-effect"><a href="#!">5</a></li>
+        <li class="waves-effect"><a href="#!"><i class="material-icons">chevron_right</i></a></li>
+      </ul>
+    </div>
     <div class="row">
       <div class="col s12">
         <div class="grey card-panel teal center-align">
