Page追加。 Indexのカテゴリー表示追加。

--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
           </div>
           <div class="card-action">
             <a href="#">続きを読む</a>
+            <div class="chip z-depth-1">活動日誌</div>
           </div>
         </div>
       </div> <!--1nd-->
@@ -126,6 +127,7 @@
           </div>
           <div class="card-action">
             <a href="#">続きを読む</a>
+            <div class="chip z-depth-1">活動日誌</div>
           </div>
         </div>
       </div>  <!--2nd-->
@@ -141,6 +143,7 @@
           </div>
           <div class="card-action">
             <a href="#">続きを読む</a>
+          <div class="chip z-depth-1">活動日誌</div>
           </div>
         </div>
       </div>  <!--3rd-->
