フォローするの追加

--- a/page.html
+++ b/page.html
@@ -24,9 +24,25 @@
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
       js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/ja_KS/sdk.js#xfbml=1&version=v2.5";
+      js.src = "//connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v2.9&appId=824069307697895";
       fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));</script>
+    <script>window.twttr = (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0],
+    t = window.twttr || {};
+  if (d.getElementById(id)) return t;
+  js = d.createElement(s);
+  js.id = id;
+  js.src = "https://platform.twitter.com/widgets.js";
+  fjs.parentNode.insertBefore(js, fjs);
+
+  t._e = [];
+  t.ready = function(f) {
+    t._e.push(f);
+  };
+
+  return t;
+}(document, "script", "twitter-wjs"));</script>
 <header>
   <nav class="nav-extended">
     <div class="nav-wrapper z-depth-3">
@@ -89,17 +105,19 @@
           </div>
         </div>
         <div class="col s12 m3 l3">
-        <div class="card blue-grey darken-1">
-          <div class="card-content white-text">
-          <span class="card-title">Card Title</span>
-            <p>I am a very simple card. I am good at containing small bits of information.
-            I am convenient because I require little markup to use effectively.</p>
-          </div>
-            <div class="card-action">
-              <a href="#">This is a link</a>
+          <div class="card  blue-grey darken-1">
+            <div class="card-content white-text">
+            <span class="card-title">フォローする</span>
+            <p>若木睦をフォローして最新情報を受け取りましょう！</p>
+            <p><br></p>
+              <a class="twitter-follow-button"
+              href="https://twitter.com/wakagimutsumi" data-show-count="false" data-show-screen-name="false">@wakagimutsumi</a>
+               <iframe src="https://www.facebook.com/plugins/follow.php?href=https%3A%2F%2Fwww.facebook.com%2Fwakagimutsumi&width=117&height=21&layout=button_count&size=small&show_faces=true&appId=824069307697895" width="117" height="21" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+               <a href="#" class="insta_btn2">
+                <i class="fa fa-instagram"></i> <span>Follow Me</span>
+                </a>
             </div>
           </div>
-        </div>
       </div>
     </div>
     <div class="row">
